Initial commit: keywest pipeline

--- a/params.yaml
+++ b/params.yaml
@@ -1,18 +1,19 @@
 # Input/Output paths
-input_dir: "/blue/bphl-florida/yhwinnie/test/keywest-nf/fastqs"
-reference: "/blue/bphl-florida/yhwinnie/test/keywest-nf/resources/reference/GCF_000069185.1_ASM6918v1_genomic.fna.gz"
-output: "/blue/bphl-florida/yhwinnie/test/keywest-nf/output"
+input_dir: "/path/to/fastqs"
+reference: "/path/to/resources/reference/GCF_000069185.1_ASM6918v1_genomic.fna.gz" #need to be the name of the file
+output: "/path/to/output"
 
 # Kraken2 database path
 kraken2_db: "/orange/bphl-florida/databases/kraken_databases/minikraken2_v2_8GB_201904_UPDATE"
 
+
 # NTM-profiler database path
-NTM_profiler_db: "/blue/bphl-florida/yhwinnie/test/keywest-nf/resources/NTM-profiler"
+NTM_profiler_db: "/path/to/resources/NTM-profiler"
 
-# HMM database path (uncomment and update when ready)
-# hmm_database: "/path/to/your/hmm/database.hmm"
+# HMM database path
+erm41: "/path/to/resources/hmm/erm41_cds.fasta"
 
-# Quality control thresholds (uncomment when needed)
-# qc_thresholds:
-#   min_coverage: 90  # Minimum coverage percentage
-#   min_depth: 15     # Minimum depth of coverage (x)
+card_database: "/path/to/resources/carddatabase/card_db"
+
+
+# For BPHL use: /blue/bphl-florida/share/keywest_database/resources
