--- a/nextflow.config
+++ b/nextflow.config
@@ -11,19 +11,11 @@ process {
     withName: 'samtools' {
         container = 'docker://staphb/samtools:1.21'
     }
-    withName: 'prokka' {
-        container = 'docker://staphb/prokka:1.14.6'
-    }
     withName: 'kraken2' {
         container = 'docker://staphb/kraken2:2.0.8-beta'
-        memory = '16 GB'
-        cpus = 4
     }
-
-    withName: 'hmmer' {
-        container = 'docker://staphb/hmmer:3.4'
+    withName:unicycler {
+        container = 'docker://staphb/unicycler:0.5.1'
     }
-    withName: 'pilon' {
-        memory = '32 GB'
-    }
+ 
 }
