update NTM-profiler to include more sp

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,8 +14,10 @@ process {
     withName: 'kraken2' {
         container = 'docker://staphb/kraken2:2.0.8-beta'
     }
-    withName:unicycler {
+    withName: 'unicycler' {
         container = 'docker://staphb/unicycler:0.5.1'
     }
- 
+    withName: 'ntm_profiler' {
+        errorStrategy = 'ignore'
+    }
 }
