--- a/nextflow.config
+++ b/nextflow.config
@@ -8,9 +8,11 @@ process {
     withName: 'multiqc' {
         container = 'docker://staphb/multiqc:1.28'
     }
-    withName: 'samtools' {
+    /*
+    withName: 'stats' {
         container = 'docker://staphb/samtools:1.21'
     }
+    */
     withName: 'kraken2' {
         container = 'docker://staphb/kraken2:2.0.8-beta'
     }
